--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -8,15 +8,11 @@
     Add Note
   </button>
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4" *ngFor="let note of notesData">
       <div class="card card-body">
-        <h4>Note One</h4>
+        <h4>{{ note.note_title }}</h4>
         <p class="text-muted">
-          A quick laxy fox jumps over the lazy dog. A quick laxy fox jumps over
-          the lazy dog. A quick laxy fox jumps over the lazy dog. A quick laxy
-          fox jumps over the lazy dog. A quick laxy fox jumps over the lazy dog.
-          A quick laxy fox jumps over the lazy dog. A quick laxy fox jumps over
-          the lazy dog.
+          {{ note.note_dec }}
         </p>
         <div class="d-flex align-items-center">
           <span class="mx-2">
@@ -31,6 +27,7 @@
               class="bi bi-trash"
               data-bs-toggle="modal"
               data-bs-target="#deleteNoteModal"
+              (click)="deleteNote(note)"
             ></i>
           </span>
         </div>
@@ -49,7 +46,7 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Add note</h5>
           <button
             type="button"
             class="close"
@@ -60,16 +57,27 @@
           </button>
         </div>
         <div class="modal-body">
-          <form>
+          <form [formGroup]="noteForm">
             <div class="form-group">
               <label for="recipient-name" class="col-form-label"
-                >Recipient:</label
+                >Note title:</label
               >
-              <input type="text" class="form-control" id="recipient-name" />
+              <input
+                type="text"
+                class="form-control"
+                id="recipient-name"
+                formControlName="title"
+              />
             </div>
             <div class="form-group">
-              <label for="message-text" class="col-form-label">Message:</label>
-              <textarea class="form-control" id="message-text"></textarea>
+              <label for="message-text" class="col-form-label"
+                >Note description:</label
+              >
+              <textarea
+                class="form-control"
+                id="message-text"
+                formControlName="description"
+              ></textarea>
             </div>
           </form>
         </div>
@@ -77,7 +85,14 @@
           <button type="button" class="btn btn-secondary" data-dismiss="modal">
             Close
           </button>
-          <button type="button" class="btn btn-primary">Send message</button>
+          <button
+            type="button"
+            class="btn btn-primary"
+            (click)="addNote()"
+            [disabled]="noteForm.invalid"
+          >
+            Add note
+          </button>
         </div>
       </div>
     </div>
@@ -105,16 +120,25 @@
           </button>
         </div>
         <div class="modal-body">
-          <form>
+          <form [formGroup]="editForm">
             <div class="form-group">
-              <label for="recipient-name" class="col-form-label"
-                >Recipient:</label
-              >
-              <input type="text" class="form-control" id="recipient-name" />
+              <label for="recipient-name" class="col-form-label">Title:</label>
+              <input
+                type="text"
+                class="form-control"
+                id="recipient-name"
+                formControlName="edit_title"
+              />
             </div>
             <div class="form-group">
-              <label for="message-text" class="col-form-label">Message:</label>
-              <textarea class="form-control" id="message-text"></textarea>
+              <label for="message-text" class="col-form-label"
+                >Note description:</label
+              >
+              <textarea
+                class="form-control"
+                id="message-text"
+                formControlName="edit_description"
+              ></textarea>
             </div>
           </form>
         </div>
@@ -122,52 +146,9 @@
           <button type="button" class="btn btn-secondary" data-dismiss="modal">
             Close
           </button>
-          <button type="button" class="btn btn-primary">Send message</button>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- delete notes modal -->
-  <div
-    class="modal fade"
-    id="deleteNoteModal"
-    tabindex="-1"
-    role="dialog"
-    aria-labelledby="exampleModalLabel"
-    aria-hidden="true"
-  >
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">New message</h5>
-          <button
-            type="button"
-            class="close"
-            data-dismiss="modal"
-            aria-label="Close"
-          >
-            <span aria-hidden="true">&times;</span>
+          <button type="button" class="btn btn-primary" (click)="updateNote()">
+            Update note
           </button>
-        </div>
-        <div class="modal-body">
-          <form>
-            <div class="form-group">
-              <label for="recipient-name" class="col-form-label"
-                >Recipient:</label
-              >
-              <input type="text" class="form-control" id="recipient-name" />
-            </div>
-            <div class="form-group">
-              <label for="message-text" class="col-form-label">Message:</label>
-              <textarea class="form-control" id="message-text"></textarea>
-            </div>
-          </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">
-            Close
-          </button>
-          <button type="button" class="btn btn-primary">Send message</button>
         </div>
       </div>
     </div>
